--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a class="apresentacao__link__botao" href="https://github.com/GustavoAP1">GitHub</a>
             </div>
         </section>
-        <img src="Minha Foto.jpg" alt="Foto de Gustavo Pinheiro" class="apresentacao__img">
+        <img src="Minha Foto.png" alt="Foto de Gustavo Pinheiro" class="apresentacao__img">
     </main>
     <footer></footer>
 </body>
