--- a/index.html
+++ b/index.html
@@ -5,21 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apresentação</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-    <header></header>
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a class="cabecalho__menu__link" href="index.html">Home</a>
+            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
+        </nav>
+    </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="h1-destacado">com um Front-end de qualidade!</strong></h1>
             <p class="apresentacao__conteudo__paragrafo">Olá! Sou Gustavo Pinheiros, desenvolvedor com especialidade em Java, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__link">
-            <a class="apresentacao__link__botao" href="https://vercel.com/gustavoap1s-projects">Vercel</a>
-            <a class="apresentacao__link__botao" href="https://github.com/GustavoAP1">GitHub</a>
+            <h2 class="apresentacao__subtitulo">Acesse minhas redes:</h2>
+            <a class="apresentacao__link__botao" href="https://github.com/GustavoAP1"><img src="./assets/github.png">GitHub</a>
+            <a class="apresentacao__link__botao" href="https://www.linkedin.com/in/gustavo-pinheiro-1064ba318/"><img src="./assets/linkedin.png">Linkedin</a>
+            <a class="apresentacao__link__botao" href="https://vercel.com/gustavoap1s-projects"><img src="./assets/whatsapp.png">Whatsapp</a>
             </div>
         </section>
-        <img src="minhafoto.png" alt="Foto de Gustavo Pinheiro" class="apresentacao__img">
+        <img src="./assets/minhafoto.png" alt="Foto de Gustavo Pinheiro" class="apresentacao__img">
     </main>
-    <footer></footer>
+    <footer class="rodape">
+        <p>Desenvolvido por Gustavo Pinheiro</p>
+    </footer>
 </body>
 </html>
