Corrigindo link do whatsapp

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h2 class="apresentacao__subtitulo">Acesse minhas redes:</h2>
             <a class="apresentacao__link__botao" href="https://github.com/GustavoAP1"><img src="./assets/github.png">GitHub</a>
             <a class="apresentacao__link__botao" href="https://www.linkedin.com/in/gustavo-pinheiro-1064ba318/"><img src="./assets/linkedin.png">Linkedin</a>
-            <a class="apresentacao__link__botao" href="https://vercel.com/gustavoap1s-projects"><img src="./assets/whatsapp.png">Whatsapp</a>
+            <a class="apresentacao__link__botao" href="https://w.app/3rr2v5"><img src="./assets/whatsapp.png">Whatsapp</a>
             </div>
         </section>
         <img src="./assets/minhafoto.png" alt="Foto de Gustavo Pinheiro" class="apresentacao__img">
