--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="h1-destacado">com um Front-end de qualidade!</strong></h1>
-            <p class="apresentacao__conteudo__paragrafo">Olá! Sou Gustavo Pinheiros, desenvolvedor com especialidade em Java, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <p class="apresentacao__conteudo__paragrafo">Olá! Sou Gustavo Pinheiro, desenvolvedor com especialidade em Java, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__link">
             <h2 class="apresentacao__subtitulo">Acesse minhas redes:</h2>
             <a class="apresentacao__link__botao" href="https://github.com/GustavoAP1"><img src="./assets/github.png">GitHub</a>
